cabal-version:      3.8
name:               blog
version:            0.1.0.0

common shared-properties
    default-language: GHC2021
    ghc-options:
        -Wall
        -O2
    build-depends:
        base < 5.0,
        fast-logger,
        http-types,
        wai,
    default-extensions:
        AllowAmbiguousTypes,
        DataKinds,
        DeriveAnyClass,
        DerivingStrategies,
        DuplicateRecordFields,
        FunctionalDependencies,
        GADTs,
        LambdaCase,
        MultiWayIf,
        NamedFieldPuns,
        OverloadedStrings,
        RankNTypes,
        RecordWildCards,
        TupleSections,
        TypeFamilies

library
    import: shared-properties
    hs-source-dirs:   lib
    build-depends:
       aeson,
       bytestring,
       clock,
       http-media,
       mtl,
       servant,
       servant-server,
       text,
       time,
       uuid,
    exposed-modules:
       Config,
       Logger,
       Web.Application,
    other-modules:
       Web.Api,
       Web.Api.Routes.Blog,
       Web.ContentTypes,
       Web.Site,
       Web.RequestContext,
       Web.RouteHandler

executable blog
    import: shared-properties
    hs-source-dirs:   app/blog
    main-is:          Main.hs
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
    build-depends:
        blog,
        optparse-applicative,
        warp,
    other-modules:
        CommandLineArgs,

