cabal-version:      3.8
name:               blog
version:            0.1.0.0

common shared-properties
    default-language: GHC2021
    ghc-options:
        -Wall
        -O2
    build-depends:
        base < 5.0,
        fast-logger,
        http-types,
        wai,
    default-extensions:
        AllowAmbiguousTypes,
        DataKinds,
        DeriveAnyClass,
        DerivingStrategies,
        DuplicateRecordFields,
        FunctionalDependencies,
        GADTs,
        LambdaCase,
        MultiWayIf,
        NamedFieldPuns,
        OverloadedStrings,
        RankNTypes,
        RecordWildCards,
        TupleSections,
        TypeFamilies

library
    import: shared-properties
    hs-source-dirs:   lib
    build-depends:
        aeson,
        base64,
        bytestring,
        clock,
        cookie,
        cryptonite,
        http-media,
        jose-jwt,
        mtl,
        resource-pool,
        servant,
        servant-server,
        sqlite-simple,
        text,
        time,
        uuid,
    exposed-modules:
        Config,
        DbConnPool,
        Logger,
        User,
        Web.Application,
    other-modules:
        AuthToken,
        Blog,
        Blog.Command,
        Blog.Model,
        Blog.Query,
        User.Command,
        User.Model,
        User.Query,
        Web.Api,
        Web.Api.Routes.Auth,
        Web.Api.Routes.Blog,
        Web.Api.Routes.User,
        Web.Auth,
        Web.ContentTypes,
        Web.Site,
        Web.RequestContext,
        Web.RouteHandler,
        Web.Util,

executable blog
    import: shared-properties
    hs-source-dirs:   app/blog
    main-is:          Main.hs
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
    build-depends:
        blog,
        optparse-applicative,
        warp,
    other-modules:
        CommandLineArgs,

executable dev-server
    import: shared-properties
    hs-source-dirs:   app/dev-server
    main-is:          Main.hs
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
    build-depends:
        dev-server,

executable make-user
    import: shared-properties
    hs-source-dirs:   app/make-user
    main-is:          Main.hs
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
    build-depends:
        blog,
        dev-server,
        mtl,
        optparse-applicative,
        optparse-text,
        sqlite-simple,
        text,
    other-modules:
        CommandLineArgs,

